chore(webui): optimize code block styling (#113)
* chore(webui): code block styling

* update

--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -42,12 +42,14 @@
     "ai": "^4.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "copy-to-clipboard": "^3.3.3",
     "lucide-react": "^0.487.0",
     "mdast": "^3.0.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "15.5.0",
     "react-textarea-autosize": "^8.5.9",
     "react-use": "^17.6.0",
     "rehype-raw": "^7.0.0",
@@ -64,12 +66,13 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@ragdoll/vscode-webui-bridge": "workspace:*",
     "@ragdoll/tools": "workspace:*",
+    "@ragdoll/vscode-webui-bridge": "workspace:*",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/react-dom": "^19.0.3",
+    "@types/react-syntax-highlighter": "15.5.6",
     "@types/vscode-webview": "^1.57.5",
     "@vitejs/plugin-react": "^4.3.4",
     "jsdom": "^26.0.0",
