--- a/biome.json
+++ b/biome.json
@@ -32,6 +32,9 @@
       "suspicious": {
         "noArrayIndexKey": "off"
       },
+      "a11y": {
+        "useKeyWithClickEvents": "off"
+      },
       "nursery": {
         "useSortedClasses": {
           "level": "warn",
