feat: improve diff view (#138)
* feat(fs): add isFileExist function and refactor file existence checks

* feat: enhance tool call options with state management and implement diff view for file operations

* chore: update dependencies and fix write-to-file tool

* refactor(write-to-file): remove unused DiffViewMap and related functions

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -106,7 +106,8 @@
     "ignore": "^7.0.4",
     "jszip": "^3.10.1",
     "minimatch": "^10.0.1",
-    "project-name-generator": "^2.1.9"
+    "project-name-generator": "^2.1.9",
+    "run-exclusive": "^2.2.19"
   },
   "devDependencies": {
     "@ragdoll/tools": "workspace:*",
