--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -102,6 +102,7 @@
   },
   "dependencies": {
     "@quilted/threads": "^3.1.3",
+    "diff": "^7.0.0",
     "file-type": "^20.4.1",
     "ignore": "^7.0.4",
     "jszip": "^3.10.1",
@@ -112,6 +113,7 @@
   "devDependencies": {
     "@ragdoll/tools": "workspace:*",
     "@ragdoll/vscode-webui-bridge": "workspace:*",
+    "@types/diff": "^7.0.2",
     "@types/project-name-generator": "^2.1.3",
     "@types/vscode": "^1.82.0",
     "@vscode/vsce": "^3.3.2",
