--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -10,7 +10,7 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
-    "@ai-sdk/react": "^1.2.9",
+    "@ai-sdk/react": "1.2.12",
     "@daveyplate/better-auth-tanstack": "^1.3.2",
     "@hono/client": "^0.0.3",
     "@leeoniya/ufuzzy": "^1.0.18",
