--- a/packages/vscode-webui-bridge/package.json
+++ b/packages/vscode-webui-bridge/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@ragdoll/vscode-webui-bridge",
-  "private": true,
   "main": "src/index.ts",
   "devDependencies": {
     "@quilted/threads": "^3.1.3"
-  }
+  },
+  "private": true
 }
