--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -14,6 +14,7 @@
     "@daveyplate/better-auth-tanstack": "^1.3.2",
     "@hono/client": "^0.0.3",
     "@leeoniya/ufuzzy": "^1.0.18",
+    "@preact/signals-core": "^1.8.0",
     "@quilted/threads": "^3.1.3",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-checkbox": "^1.2.3",
@@ -66,6 +67,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@preact/signals-react-transform": "^0.5.1",
     "@ragdoll/tools": "workspace:*",
     "@ragdoll/vscode-webui-bridge": "workspace:*",
     "@tailwindcss/typography": "^0.5.16",
