--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -123,6 +123,7 @@
     "release-patch": "bunx bumpp --tag=vscode@%s"
   },
   "dependencies": {
+    "@preact/signals-core": "^1.8.0",
     "@quilted/threads": "^3.1.3",
     "diff": "^7.0.0",
     "file-type": "^20.4.1",
