feat: use tsyringe for DI, to simplify injection / disposing flow (#156)
* feat(vscode): add dependency injection with tsyringe and reflect-metadata

* refactor(auth-events): refactor auth events to use class and dependency injection

* refactor(extension): update activation log message and register AuthClient as singleton

* refactor(status-bar): refactor status bar item creation and management

* refactor(editor): implement `vscode.Disposable` for `DiffOriginContentProvider`

* refactor(vscode): rename CommandController to CommandManager

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -131,7 +131,9 @@
     "jszip": "^3.10.1",
     "minimatch": "^10.0.1",
     "project-name-generator": "^2.1.9",
-    "run-exclusive": "^2.2.19"
+    "reflect-metadata": "^0.2.2",
+    "run-exclusive": "^2.2.19",
+    "tsyringe": "^4.10.0"
   },
   "devDependencies": {
     "@ragdoll/tools": "workspace:*",
