chore(vscode): adding unit test for VSCode (#157)
* chore(vscode): update dependencies and add test configuration

- Updated package versions in package.json, including @vscode/test-cli and @types/mocha.
- Added .vscode-test.mjs for VS Code test configuration.
- Introduced tsconfig.test.json for TypeScript test compilation.
- Created test-setup.js to handle TypeScript path mappings for tests.
- Added initial test cases for diff-utils in diff-utils.test.ts.
- Updated .gitignore to exclude new test output directories.

* chore(tests): add Vitest configuration for test exclusions

* chore(tests): update test command to include VS Code tests

* chore(tests): streamline test command and enhance test file discovery

- Updated the test command in package.json to run Vitest only.
- Modified Vitest configuration to exclude additional test directories.
- Reintroduced @vscode/test-cli dependency in vscode package.json.
- Created a new script to find test files in the project.
- Added unit tests for the createPrettyPatch function in diff-utils.test.ts.

* chore(tests): remove VS Code test command from package.json

* chore(tests): remove find-test-files.js script

* update

* update

* update

* update

* update

---------

Co-authored-by: Meng Zhang <meng@tabbyml.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
     "./packages/server/src/db/schema.d.ts",
     "./packages/server/src/db/event.ts"
   ],
+  "[json]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
   "[typescript]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
