--- a/biome.json
+++ b/biome.json
@@ -15,7 +15,9 @@
       "packages/website/src/components/ui/*.tsx",
       "packages/code/src/lib/db/*.ts",
       "packages/server/migrations/*.ts",
-      "packages/server/scripts/migrate-db-schema.ts"
+      "packages/server/scripts/migrate-db-schema.ts",
+      "packages/vscode/.vscode-test",
+      "packages/vscode/out"
     ]
   },
   "formatter": {
