docs: update testing guidelines and package.json scripts

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -120,7 +120,7 @@
     "start": "code --extensionDevelopmentPath=$PWD",
     "dev": "npm-run-all --parallel watch start",
     "tsc": "tsc --noEmit",
-    "pretest": "tsc -p tsconfig.test.json",
+    "pretest": "rm -rf out && tsc -p tsconfig.test.json",
     "test": "vscode-test",
     "coverage": "rm -rf dist && vscode-test --coverage --coverage-output ./coverage --coverage-reporter html --coverage-reporter text",
     "release-patch": "bunx bumpp --tag=vscode@%s"
@@ -144,12 +144,14 @@
     "@types/diff": "^7.0.2",
     "@types/mocha": "^10.0.10",
     "@types/project-name-generator": "^2.1.3",
+    "@types/sinon": "^17.0.4",
     "@types/vscode": "^1.82.0",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.5.2",
     "@vscode/vsce": "^3.3.2",
     "cpy-cli": "^5.0.0",
     "semver": "^7.7.1",
+    "sinon": "^20.0.0",
     "tsconfig-paths": "^4.2.0"
   }
 }
