--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,7 @@
     "@hono-storage/core": "^0.0.14",
     "@hono-storage/s3": "^0.0.13",
     "@hono/zod-validator": "^0.4.3",
+    "@lmnr-ai/lmnr": "^0.6.0",
     "@octokit/app": "^15.1.6",
     "@openrouter/ai-sdk-provider": "^0.4.4",
     "@ragdoll/tools": "workspace:*",
