--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -48,6 +48,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "js-base64": "^3.7.7",
     "lucide-react": "^0.487.0",
     "moment": "^2.30.1",
     "next-themes": "^0.4.6",
