--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -129,6 +129,7 @@
     "@preact/signals-core": "^1.8.0",
     "@quilted/threads": "^3.1.3",
     "diff": "^7.0.0",
+    "fast-deep-equal": "^3.1.3",
     "file-type": "^20.4.1",
     "ignore": "^7.0.4",
     "jszip": "^3.10.1",
