--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@better-auth/stripe": "^1.2.7",
-    "@daveyplate/better-auth-tanstack": "^1.3.2",
-    "@daveyplate/better-auth-ui": "^1.3.19",
+    "@daveyplate/better-auth-tanstack": "^1.3.4",
+    "@daveyplate/better-auth-ui": "1.5.18",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
@@ -48,6 +48,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "framer-motion": "^12.11.0",
     "js-base64": "^3.7.7",
     "lucide-react": "^0.487.0",
     "moment": "^2.30.1",
