feat(home): add background gradient to home components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
   "[typescriptreact]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
+  "tailwindCSS.experimental.classRegex": ["cn`([^`]*)"],
   "editor.formatOnSave": true
 }
