refactor: update Tailwind CSS class regex and add `tw` utility function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,6 @@
   "[typescriptreact]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
-  "tailwindCSS.experimental.classRegex": ["cn`([^`]*)"],
+  "tailwindCSS.classFunctions": ["tw"],
   "editor.formatOnSave": true
 }
