test(vscode): allow run typescript test directly with esbuild-register (#197)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,6 +21,16 @@
       ],
       "outFiles": ["${workspaceFolder}/packages/vscode/dist/**/*.js"],
       "preLaunchTask": "watch-vscode"
+    },
+    {
+      "name": "Run VSCode Extension Tests",
+      "type": "extensionHost",
+      "request": "launch",
+      "testConfiguration": "${workspaceFolder}/packages/vscode/.vscode-test.mjs",
+      "args": [
+        "--extensionDevelopmentPath=${workspaceFolder}/packages/vscode",
+        "--disable-extensions"
+      ]
     }
   ]
 }
