chore: adding tiptap editor history that support undo/redo (#231)
* feat(vscode-webui): update @tiptap/extension-history to version 2.12.0 and configure history depth

* fix(form-editor): remove duplicate import of History extension

--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -36,6 +36,7 @@
     "@tanstack/react-router-devtools": "^1.119.0",
     "@tanstack/router-plugin": "^1.119.0",
     "@tiptap/extension-document": "^2.11.7",
+    "@tiptap/extension-history": "^2.12.0",
     "@tiptap/extension-mention": "^2.11.7",
     "@tiptap/extension-paragraph": "^2.11.7",
     "@tiptap/extension-placeholder": "^2.11.7",
