feat: implement resumable streaming and add streamIds to task schema (#260)
* feat: implement resumable streaming and add streamIds to task schema

* update

* update

* update

* update

* feat: generate and append streamId for chat requests

--- a/biome.json
+++ b/biome.json
@@ -18,7 +18,8 @@
       "packages/server/db/schema.d.ts",
       "packages/server/scripts/migrate-db-schema.ts",
       "packages/vscode/.vscode-test",
-      "packages/vscode/out"
+      "packages/vscode/out",
+      "**/node_modules/**"
     ]
   },
   "formatter": {
