--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,7 +24,9 @@
     "moment-timezone": "^0.5.48",
     "pg": "^8.14.1",
     "pg-connection-string": "^2.7.0",
+    "redis": "^5.0.1",
     "resend": "^4.2.0",
+    "resumable-stream": "^2.1.0",
     "stripe": "17",
     "zod": "^3.24.2"
   },
