--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -91,6 +91,7 @@
     "jsdom": "^26.0.0",
     "storybook": "^8.6.12",
     "vite": "^6.2.3",
+    "vite-plugin-environment": "^1.1.3",
     "vite-tsconfig-paths": "^5.1.4",
     "web-vitals": "^4.2.4"
   }
