fix(tasks): add problemMatcher to server tasks for improved error handling

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -31,7 +31,24 @@
         "kind": "none",
         "isDefault": true
       },
-      "isBackground": true
+      "isBackground": true,
+      "problemMatcher": [
+        {
+          "pattern": [
+            {
+              "regexp": ".",
+              "file": 1,
+              "location": 2,
+              "message": 3
+            }
+          ],
+          "background": {
+            "activeOnStart": true,
+            "beginsPattern": ".",
+            "endsPattern": "."
+          }
+        }
+      ]
     },
     {
       "type": "shell",
@@ -41,7 +58,24 @@
         "kind": "none",
         "isDefault": true
       },
-      "isBackground": true
+      "isBackground": true,
+      "problemMatcher": [
+        {
+          "pattern": [
+            {
+              "regexp": ".",
+              "file": 1,
+              "location": 2,
+              "message": 3
+            }
+          ],
+          "background": {
+            "activeOnStart": true,
+            "beginsPattern": ".",
+            "endsPattern": "."
+          }
+        }
+      ]
     },
     {
       "label": "dev:server",
