--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-hover-card": "^1.1.11",
+    "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.8",
     "@radix-ui/react-separator": "^1.1.4",
