--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -50,6 +50,7 @@
     "copy-to-clipboard": "^3.3.3",
     "lucide-react": "^0.487.0",
     "mdast": "^3.0.0",
+    "motion": "^12.12.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
