--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,6 +6,7 @@
     "./message-utils": "./src/lib/message-utils.ts"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.11",
     "@ai-sdk/google": "^1.2.3",
     "@ai-sdk/openai": "^1.3.2",
     "@better-auth/stripe": "^1.2.7",
