refactor(server): add formatters for message processing and update dependencies (#316)

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -29,7 +29,8 @@
     "resend": "^4.2.0",
     "resumable-stream": "^2.1.0",
     "stripe": "17",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "remeda": "^2.21.3"
   },
   "scripts": {
     "tsc": "tsc --noEmit",
