--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -16,8 +16,8 @@
     "@daveyplate/better-auth-tanstack": "^1.3.2",
     "@hono/client": "^0.0.3",
     "@leeoniya/ufuzzy": "^1.0.18",
-    "@preact/signals-core": "^1.8.0",
-    "@quilted/threads": "^3.1.3",
+    "@preact/signals-core": "catalog:",
+    "@quilted/threads": "catalog:",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
@@ -44,7 +44,7 @@
     "@tiptap/extension-text": "^2.11.7",
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
-    "ai": "^4.3.16",
+    "ai": "catalog:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
@@ -52,7 +52,7 @@
     "mdast": "^3.0.0",
     "motion": "^12.12.1",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "catalog:",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "15.5.0",
@@ -64,7 +64,7 @@
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "remark-stringify": "^11.0.0",
-    "remeda": "^2.21.3",
+    "remeda": "catalog:",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
