--- a/package.json
+++ b/package.json
@@ -12,7 +12,19 @@
     "dev:server": "bun --filter '*' dev:server",
     "prepare": "husky"
   },
-  "workspaces": ["packages/*"],
+  "workspaces": {
+    "packages": ["packages/*"],
+    "catalog": {
+      "react": "^19",
+      "ai": "^4.3.16",
+      "zod": "^3.24.2",
+      "@preact/signals-core": "^1.8.0",
+      "@quilted/threads": "^3.1.3",
+      "better-auth": "^1.2.7",
+      "moment": "^2.30.1",
+      "remeda": "^2.21.3"
+    }
+  },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@types/bun": "^1.2.6",
