--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -2,7 +2,7 @@
   "name": "@ragdoll/tools",
   "main": "src/index.ts",
   "dependencies": {
-    "ai": "^4.3.16",
-    "zod": "^3.24.2"
+    "ai": "catalog:",
+    "zod": "catalog:"
   }
 }
