--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -44,16 +44,16 @@
     "@tanstack/react-table": "^8.21.2",
     "@tanstack/router-plugin": "^1.119.0",
     "add": "^2.0.6",
-    "better-auth": "^1.2.7",
+    "better-auth": "catalog:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "framer-motion": "^12.11.0",
     "js-base64": "^3.7.7",
     "lucide-react": "^0.487.0",
-    "moment": "^2.30.1",
+    "moment": "catalog:",
     "next-themes": "^0.4.6",
-    "react": "^19",
+    "react": "catalog:",
     "react-dom": "^19",
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
@@ -61,7 +61,7 @@
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
