--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -53,6 +53,7 @@
     "lucide-react": "^0.487.0",
     "moment": "catalog:",
     "next-themes": "^0.4.6",
+    "posthog-js": "^1.246.0",
     "react": "catalog:",
     "react-dom": "^19",
     "recharts": "^2.15.2",
