--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,8 +2,7 @@
   "name": "@ragdoll/server",
   "main": "src/index.ts",
   "exports": {
-    ".": "./src/index.ts",
-    "./message-utils": "./src/lib/message-utils.ts"
+    ".": "./src/index.ts"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
@@ -15,6 +14,7 @@
     "@hono/zod-validator": "^0.4.3",
     "@lmnr-ai/lmnr": "^0.6.0",
     "@openrouter/ai-sdk-provider": "^0.4.4",
+    "@ragdoll/common": "workspace:*",
     "@ragdoll/tools": "workspace:*",
     "@slack/bolt": "^4.2.1",
     "ai": "catalog:",
@@ -29,8 +29,7 @@
     "resend": "^4.2.0",
     "resumable-stream": "^2.1.0",
     "stripe": "17",
-    "zod": "catalog:",
-    "remeda": "catalog:"
+    "zod": "catalog:"
   },
   "scripts": {
     "tsc": "tsc --noEmit",
