--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@ragdoll/common": "workspace:*",
     "@ragdoll/server": "workspace:*",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/query-sync-storage-persister": "^5.75.0",
