fix(todos): refactor ZodTodo schema and update dependencies

--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -2,6 +2,7 @@
   "name": "@ragdoll/tools",
   "main": "src/index.ts",
   "dependencies": {
+    "@ragdoll/common": "workspace:*",
     "ai": "catalog:",
     "zod": "catalog:"
   }
