refactor(db): create @ragdoll/db package with schema definitions and external integration types (#332)

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,12 +15,13 @@
     "@lmnr-ai/lmnr": "^0.6.0",
     "@openrouter/ai-sdk-provider": "^0.4.4",
     "@ragdoll/common": "workspace:*",
+    "@ragdoll/db": "workspace:*",
     "@ragdoll/tools": "workspace:*",
-    "@slack/bolt": "^4.2.1",
+    "@slack/bolt": "catalog:",
     "ai": "catalog:",
     "better-auth": "catalog:",
     "hono": "^4.7.5",
-    "kysely": "^0.27.6",
+    "kysely": "catalog:",
     "moment": "catalog:",
     "moment-timezone": "^0.5.48",
     "pg": "^8.14.1",
@@ -35,11 +36,9 @@
     "tsc": "tsc --noEmit",
     "dev:server": "bun --hot src/server.ts",
     "build": "bun build src/server.ts --outdir dist --target bun",
-    "start": "bun run dist/server.js",
-    "db:genschema": "kysely-codegen --out-file ./src/db/schema.d.ts"
+    "start": "bun run dist/server.js"
   },
   "devDependencies": {
-    "@types/pg": "^8.11.11",
-    "kysely-codegen": "^0.18.3"
+    "@types/pg": "^8.11.11"
   }
 }
