--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
       "@quilted/threads": "^3.1.3",
       "better-auth": "^1.2.7",
       "moment": "^2.30.1",
-      "remeda": "^2.21.3"
+      "remeda": "^2.21.3",
+      "kysely": "^0.27.6",
+      "@slack/bolt": "^4.2.1"
     }
   },
   "devDependencies": {
