feat(server): add task event publishing (#287)
* feat(server): add task event publishing

* refactor(types): move TaskEvent type definition to common package

* feat(common): add @ragdoll/db as a dependency and update TaskEvent status type

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ai": "catalog:",
     "zod": "catalog:",
-    "remeda": "catalog:"
+    "remeda": "catalog:",
+    "@ragdoll/db": "workspace:*"
   }
 }
