--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "type": "module",
-  "main": "./src/index.ts",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "scripts": {
     "tsc": "tsc"
   },
