--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@ragdoll/tools",
-  "main": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "dependencies": {
     "@ragdoll/common": "workspace:*",
     "ai": "catalog:",
