fix(server, ui): ensure accurate rendering of workflow (#362)
* fix(server, ui): ensure accurate rendering of workflow

* update

* feat(formatters): refactor toUIMessageTitle and move to message-utils; add KnownTags constant

* feat(message-utils): add message-utils export to package.json; update imports in tasks components

* refactor(message-utils): rename toUIMessageTitle to parseTitle and move title processing to server

---------

Co-authored-by: Meng Zhang <meng@tabbyml.com>

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -4,15 +4,22 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./message-utils": "./src/message-utils.ts"
   },
   "scripts": {
     "tsc": "tsc"
   },
   "dependencies": {
+    "@ragdoll/db": "workspace:*",
     "ai": "catalog:",
-    "zod": "catalog:",
+    "hast": "^1.0.0",
+    "hast-util-to-text": "^4.0.2",
+    "rehype": "^13.0.2",
     "remeda": "catalog:",
-    "@ragdoll/db": "workspace:*"
+    "zod": "catalog:"
+  },
+  "devDependencies": {
+    "@types/hast": "^3.0.4"
   }
 }
