add dep-check (#367)
* add dep-check

* fix(dependencies): update hono dependency to use catalog reference
refactor(dep-check): streamline options configuration and improve type safety

* chore: update package dependencies and improve dependency management

- Updated dependencies in package.json to include new packages and versions.
- Changed dependency references in common and vscode-webui package.json files to use catalog.
- Removed unused import in custom-strip-tags-plugin.ts.
- Enhanced dep-check script to accept package name as an argument and added a package ignore list for specific packages.

* fix(tools): update dependencies in package.json and remove vscode-webui check in dep-check script

* fix(dependencies): update package dependencies and add new entries for hover-card and website

* fix(dependencies): update package dependencies and remove unused external integration file

* update

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -11,9 +11,10 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "@ai-sdk/ui-utils": "catalog:",
     "@ragdoll/db": "workspace:*",
+    "@ragdoll/tools": "workspace:*",
     "ai": "catalog:",
-    "hast": "^1.0.0",
     "hast-util-to-text": "^4.0.2",
     "rehype": "^13.0.2",
     "remeda": "catalog:",
