--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,19 +7,19 @@
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/google": "^1.2.18",
     "@ai-sdk/openai": "^1.3.2",
+    "@ai-sdk/provider-utils": "catalog:",
     "@better-auth/stripe": "^1.2.7",
-    "@hono-storage/core": "^0.0.14",
     "@hono-storage/s3": "^0.0.13",
     "@hono/zod-validator": "^0.4.3",
     "@lmnr-ai/lmnr": "^0.6.0",
-    "@openrouter/ai-sdk-provider": "^0.4.4",
     "@ragdoll/common": "workspace:*",
     "@ragdoll/db": "workspace:*",
     "@ragdoll/tools": "workspace:*",
     "@slack/bolt": "catalog:",
+    "@slack/web-api": "^7.9.2",
     "ai": "catalog:",
     "better-auth": "catalog:",
-    "hono": "^4.7.5",
+    "hono": "catalog:",
     "kysely": "catalog:",
     "moment": "catalog:",
     "moment-timezone": "^0.5.48",
@@ -29,6 +29,7 @@
     "resend": "^4.2.0",
     "resumable-stream": "^2.1.0",
     "stripe": "17",
+    "ws": "^8.18.1",
     "zod": "catalog:"
   },
   "scripts": {
