--- a/package.json
+++ b/package.json
@@ -10,27 +10,32 @@
     "tsc": "bun --filter '*' tsc",
     "build": "bun --filter '*' build",
     "dev:server": "bun --filter '*' dev:server",
+    "dep-check": "bun scripts/dep-check.ts",
     "prepare": "husky"
   },
   "workspaces": {
     "packages": ["packages/*"],
     "catalog": {
-      "react": "^19",
-      "ai": "^4.3.16",
-      "zod": "^3.24.2",
+      "@ai-sdk/ui-utils": "^1.2.11",
+      "@ai-sdk/provider-utils": "^2.2.8",
       "@preact/signals-core": "^1.8.0",
       "@quilted/threads": "^3.1.3",
+      "@slack/bolt": "^4.2.1",
+      "ai": "^4.3.16",
       "better-auth": "^1.2.7",
-      "moment": "^2.30.1",
-      "remeda": "^2.21.3",
+      "hono": "^4.7.5",
       "kysely": "^0.27.6",
-      "@slack/bolt": "^4.2.1"
+      "moment": "^2.30.1",
+      "react": "^19",
+      "remeda": "^2.21.3",
+      "zod": "^3.24.2"
     }
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@types/bun": "^1.2.6",
     "@vitest/coverage-v8": "^3.0.9",
+    "depcheck": "^1.4.7",
     "husky": "^9.1.7",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.7.2",
