--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -12,9 +12,10 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@ai-sdk/provider-utils": "catalog:",
     "@ai-sdk/react": "1.2.12",
+    "@ai-sdk/ui-utils": "catalog:",
     "@daveyplate/better-auth-tanstack": "^1.3.2",
-    "@hono/client": "^0.0.3",
     "@leeoniya/ufuzzy": "^1.0.18",
     "@preact/signals-core": "catalog:",
     "@quilted/threads": "catalog:",
@@ -45,31 +46,32 @@
     "@tiptap/extension-text": "^2.11.7",
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
+    "@tiptap/suggestion": "^2.12.0",
     "ai": "catalog:",
+    "better-auth": "catalog:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
+    "hast": "^1.0.0",
+    "hono": "catalog:",
     "lucide-react": "^0.487.0",
-    "mdast": "^3.0.0",
     "motion": "^12.12.1",
-    "next-themes": "^0.4.6",
     "react": "catalog:",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "15.5.0",
-    "react-textarea-autosize": "^8.5.9",
     "react-use": "^17.6.0",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
-    "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
-    "remark-stringify": "^11.0.0",
     "remeda": "catalog:",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
     "tippy.js": "^6.3.7",
+    "unist-util-visit": "^5.0.0",
+    "zod": "catalog:",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
