--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -14,19 +14,14 @@
     "@better-auth/stripe": "^1.2.7",
     "@daveyplate/better-auth-tanstack": "^1.3.4",
     "@daveyplate/better-auth-ui": "1.5.18",
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/modifiers": "^9.0.0",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
-    "@hono/client": "^0.0.3",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-hover-card": "^1.1.14",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.10",
-    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -43,12 +38,13 @@
     "@tanstack/react-router-devtools": "^1.119.0",
     "@tanstack/react-table": "^8.21.2",
     "@tanstack/router-plugin": "^1.119.0",
-    "add": "^2.0.6",
+    "ai": "catalog:",
     "better-auth": "catalog:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "framer-motion": "^12.11.0",
+    "hono": "catalog:",
     "js-base64": "^3.7.7",
     "lucide-react": "^0.487.0",
     "moment": "catalog:",
