--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -157,6 +157,7 @@
     "diff": "^7.0.0",
     "fast-deep-equal": "^3.1.3",
     "file-type": "^20.4.1",
+    "hono": "catalog:",
     "ignore": "^7.0.4",
     "jszip": "^3.10.1",
     "minimatch": "^10.0.1",
