feat: add sqids dependency and implement UID encoding/decoding in task service (#371)

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -28,6 +28,7 @@
     "redis": "^5.0.1",
     "resend": "^4.2.0",
     "resumable-stream": "^2.1.0",
+    "sqids": "^0.3.0",
     "stripe": "17",
     "ws": "^8.18.1",
     "zod": "catalog:"
