Fix command exe v2 (#378)
* fix(vscode): execute command in subprocess

* feat(vscode): execute command in subprocess

* fix(webui): fix syntax highlight first line extra indent

* refact(webui): store stream output outside of messages

* fix(webui): fix abort tool

* fix: remove unnecessary TypeScript ignore comment in runners.ts

chore: reorganize dependencies in package.json for vscode

* chore: revert type error change

* feat: add abort tool context and provider for event handling

* refact: replace useAbortTool with useToolEvents for improved event handling

* update

* update

---------

Co-authored-by: zhanba <c5e1856@gmail.com>

--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -58,6 +58,7 @@
     "motion": "^12.12.1",
     "react": "catalog:",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "15.5.0",
     "react-use": "^17.6.0",
