--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -181,15 +181,16 @@
     "release": "bunx bumpp --tag=vscode@%s"
   },
   "dependencies": {
-    "@ragdoll/common": "workspace:*",
-    "@ragdoll/server": "workspace:*",
+    "@modelcontextprotocol/sdk": "^1.12.0",
     "@preact/signals-core": "catalog:",
     "@quilted/threads": "catalog:",
-    "better-auth": "catalog:",
-    "@modelcontextprotocol/sdk": "^1.12.0",
+    "@ragdoll/common": "workspace:*",
+    "@ragdoll/server": "workspace:*",
     "@xstate/fsm": "^2.1.0",
     "ai": "catalog:",
+    "better-auth": "catalog:",
     "diff": "^7.0.0",
+    "execa": "^9.6.0",
     "fast-deep-equal": "^3.1.3",
     "file-type": "^20.4.1",
     "hono": "catalog:",
