refactor(new-project): using event rather then passing all data from uri (#373)
* feat: implement new project task handling in VSCode integration

- Added support for a new project event type in the UserEvent type definition.
- Refactored the NewProjectParams interface to NewProjectTask for better structure.
- Updated RagdollUriHandler to handle new project requests and integrate with the API client.
- Modified the Home component to create new project tasks and navigate accordingly.
- Adjusted the redirect-vscode route to utilize task IDs instead of base64 encoded project data.

* refactor(uri-handler): streamline NewProjectTask structure by using NewProjectParams interface

- Replaced the inline data structure in NewProjectTask with a reference to the NewProjectParams interface for improved clarity and maintainability.
- Enhanced the organization of project parameters related to new project tasks.

* refactor(task-list): enhance project directory display logic in TaskList component

- Updated the TaskList component to conditionally render the project directory based on the event type, improving clarity and maintainability.
- Simplified the rendering logic by checking for the event type before displaying project information.

* fix(prompt-evaluation): filter tasks to only process batch evaluation events

- Updated the RouteComponent to skip tasks that are not of type "batch:evaluation", ensuring only relevant tasks are processed for batch evaluations.
- This change enhances the efficiency of task handling within the component.

* refactor(command): update NewProjectParams to NewProjectTask for improved structure

- Changed the parameter type in the command registration from NewProjectParams to NewProjectTask, enhancing clarity in task handling.
- Updated the NewProjectTask interface to encapsulate project parameters more effectively, streamlining the integration with the command manager.

* feat(user-event): add requestId to new project event data structure

- Intro

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -206,6 +206,7 @@
   "devDependencies": {
     "@ragdoll/tools": "workspace:*",
     "@ragdoll/vscode-webui-bridge": "workspace:*",
+    "@ragdoll/db": "workspace:*",
     "@types/diff": "^7.0.2",
     "@types/project-name-generator": "^2.1.3",
     "@types/proxyquire": "^1.3.31",
