--- a/.github/workflows/release-pochi-vscode-extension.yml
+++ b/.github/workflows/release-pochi-vscode-extension.yml
@@ -29,3 +29,4 @@ jobs:
         run: cd packages/vscode && bun run $(bun scripts/publish.cjs)
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
+          OVSX_PAT: ${{ secrets.OVSX_PAT }}
