--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -170,6 +170,10 @@
     "vscode:package": "vsce package --no-dependencies --allow-missing-repository",
     "vscode:publish": "vsce publish --no-dependencies --allow-missing-repository",
     "vscode:publish-prerelease": "vsce publish --no-dependencies --allow-missing-repository --pre-release",
+    "ovsx:publish": "ovsx publish --no-dependencies --pat $OVSX_PAT",
+    "ovsx:publish-prerelease": "ovsx publish --no-dependencies --pre-release --pat $OVSX_PAT",
+    "publish": "bun run vscode:publish && bun run ovsx:publish",
+    "publish-prerelease": "bun run vscode:publish-prerelease && bun run ovsx:publish-prerelease",
     "watch:webui": "cd ../vscode-webui && bun run start",
     "watch:vscode": "bun build ./src/extension.ts --outdir ./dist --external vscode --format cjs --target node --watch",
     "watch": "npm-run-all --parallel watch:vscode watch:webui",
@@ -204,9 +208,9 @@
     "tsyringe": "^4.10.0"
   },
   "devDependencies": {
+    "@ragdoll/db": "workspace:*",
     "@ragdoll/tools": "workspace:*",
     "@ragdoll/vscode-webui-bridge": "workspace:*",
-    "@ragdoll/db": "workspace:*",
     "@types/diff": "^7.0.2",
     "@types/project-name-generator": "^2.1.3",
     "@types/proxyquire": "^1.3.31",
@@ -217,6 +221,7 @@
     "@vscode/vsce": "^3.3.2",
     "cpy-cli": "^5.0.0",
     "esbuild-register": "^3.6.0",
+    "ovsx": "^0.10.2",
     "proxyquire": "^2.1.3",
     "semver": "^7.7.1",
     "sinon": "^20.0.0",
