--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@ragdoll/db": "workspace:*",
     "@ragdoll/server": "workspace:*",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.0.6",
