--- a/packages/vscode-webui/package.json
+++ b/packages/vscode-webui/package.json
@@ -48,6 +48,8 @@
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/suggestion": "^2.12.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0",
     "ai": "catalog:",
     "better-auth": "catalog:",
     "class-variance-authority": "^0.7.1",
