--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -192,6 +192,7 @@
     "@ragdoll/common": "workspace:*",
     "@ragdoll/db": "workspace:*",
     "@ragdoll/server": "workspace:*",
+    "@vscode-logging/logger": "^2.0.0",
     "@xstate/fsm": "^2.1.0",
     "ai": "catalog:",
     "better-auth": "catalog:",
