--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -18,7 +18,8 @@
     "hast-util-to-text": "^4.0.2",
     "rehype": "^13.0.2",
     "remeda": "catalog:",
-    "zod": "catalog:"
+    "zod": "catalog:",
+    "tslog": "^4.9.3"
   },
   "devDependencies": {
     "@types/hast": "^3.0.4"
