--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -7,10 +7,12 @@
   "dependencies": {
     "@ai-sdk/ui-utils": "catalog:",
     "@ragdoll/common": "workspace:*",
-    "@ragdoll/db": "workspace:*",
     "@ragdoll/server": "workspace:*",
     "@ragdoll/vscode-webui-bridge": "workspace:*",
     "ai": "catalog:",
     "hono": "catalog:"
+  },
+  "devDependencies": {
+    "@ragdoll/db": "workspace:*"
   }
 }
